tests/valid/definite/BoolRecord_Valid_1.whiley
void System::main([string] args):
    x = {flag:true,code:0}
    print str(x)
    x.flag = false
    print str(x)
