tests/invalid/simple/SetIntersect_CompileFail_1.whiley
void System::main([string] args):
    {int} xs
    bool b
    xs = {1,2,3}
    b = 1.0 ∩ xs
    if b:
        print str(1)
